Changes:

v20061029:  - ShapeIcon respects aspect ratio
            - org.softsmithy.lib.swing.JListBox added
            - org.softsmithy.lib.swing.icon.XIcons added
            - StandardActions.properties some media information added
            - All jlfgr icons referenced in StandardActions.properties
            - org.softsmithy.lib.math.Doubles added
            - org.softsmithy.lib.math.Floats added
            - Bug 1581780 fixed
            - commented out system outputs
            - Javadocs added
            - First trails of a tutorial & samples added
            - a copy of the Sun Public License added (SPL.txt)
            - README.txt changed
            - New Ant targets added to the build.xml (e.g. "dist")
            - NetBeans Ant Projectfiles v5.0
            - Dist structure changed a bit
            - properties-files moved: i18n -> src (only one jar)
            - src.zip added
            - some minor changes

v20040727:  -Extended Icon Framework added which supports zooming strategies
             for icons. Image and shape icons supported.
             org.softsmithy.lib.swing.JXIconLabel and the 
             org.softsmithy.lib.swing.icon package
             ShapeIcon, XIcon and XImageIcon moved from org.softsmithy.lib.swing 
             to org.softsmithy.lib.swing.icon
            -org.softsmithy.lib.swing.JIconCustomizer, 
             org.softsmithy.lib.swing.JImageCustomizer and
             org.softsmithy.lib.swing.JShapeCustomizer replaced by
             org.softsmithy.lib.swing.JXIconCustomizer and the 
             Extended Icon Framework
            -improved support for the Java look and feel Graphics Repository:
             org.softsmithy.lib.swing.action.GeneralActionFactory
             org.softsmithy.lib.swing.action.DevelopmentActionFactory
             org.softsmithy.lib.swing.action.NavigationActionFactory
             org.softsmithy.lib.swing.action.MediaActionFactory