@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE jnlp PUBLIC "-//Sun Microsystems, Inc.//DTD JNLP 1.5//EN" "http://www.netbeans.org/jnlp/DTD/jnlp.dtd">
+<jnlp codebase="http://www.softsmithy.org/lib/docs/samples/dist" href="../../tutorial/swing/number/NumberFieldsSample.jnlp">
+  <information>
+    <title>Number Fields Sample</title>
+    <vendor>SoftSmithy</vendor>
+    <homepage href="../tutorial/swing/number/index.html"/>
+    <description>Number Fields Sample</description>
+    <icon href="../../../logo.jpg"/>
+    <shortcut online="true"/>
+  </information>
+  <resources>
+    <j2se href="http://java.sun.com/products/autodl/j2se" version="1.4+"/>
+  </resources>
+  <resources>
+    <jar href="softsmithy-samples.jar" main="true"/>
+  </resources>
+  <resources>
+    <jar href="lib/softsmithy.jar"/>
+  </resources>
+  <application-desc main-class="samples.swing.number.NumberFieldsSample"/>
+</jnlp>
